corrected file wrap.less

--- a/src/less/blocks/wrap/wrap.less
+++ b/src/less/blocks/wrap/wrap.less
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   max-width: 1178px; /*62%*/
-  .block-center;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1300px) {
